--- a/front end/index.html
+++ b/front end/index.html
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>hola</h1>
+    <h1>hola dasdasdasdasdasdasdasd</h1>
     <p>hola hp</p>
   </body>
 </html>
