--- a/front end/index.html
+++ b/front end/index.html
@@ -69,6 +69,17 @@
                                    <label for="pwd">Contraseña:</label>
                                    <input type="password" class="form-control" id="pwd">
                                </div>
+                               <div class="form-group">
+                                  <div class="radio">
+                                    <label><input type="radio" name="optradio">Usuario</label>
+                                  </div>
+                                  <div class="radio">
+                                    <label><input type="radio" name="optradio">Operario</label>
+                                  </div>
+                                  <div class="radio">
+                                    <label><input type="radio" name="optradio">Laboratorista</label>
+                                  </div>
+                               </div>
                                <button type="button" class="btn btn-primary btn-block" onclick="window.open('paciente.html')">Aceptar</button>
  
                            </form>       
